--- a/RecipesProject/Areas/Identity/Pages/Account/Register.cshtml
+++ b/RecipesProject/Areas/Identity/Pages/Account/Register.cshtml
@@ -4,12 +4,22 @@
     ViewData["Title"] = "Register";
 }
 
-<h1>@ViewData["Title"]</h1>
+<style>
+    /* Stilurile pentru imaginea de fundal */
+    body {
+        background-image: url('https://i.imgur.com/BHGxiv1.jpg');
+        background-size: cover; /* Asigură că imaginea de fundal se întinde pentru a acoperi întreaga suprafață a paginii */
+        background-position: top;
+        background-attachment: fixed; /* Face ca imaginea de fundal să rămână fixă în timpul scroll-ului */
+    }
+</style>
 
+@* <h1>@ViewData["Title"]</h1>
+ *@
 <div class="row">
     <div class="col-md-4">
         <form id="registerForm" asp-route-returnUrl="@Model.ReturnUrl" method="post">
-            <h2>Create a new account.</h2>
+            <h2>Register as a new user</h2>
             <hr />
             <div asp-validation-summary="ModelOnly" class="text-danger" role="alert"></div>
             <div class="form-floating mb-3">
@@ -35,9 +45,12 @@
             </div>
             <button id="registerSubmit" type="submit" class="w-100 btn btn-lg btn-primary">Register</button>
         </form>
+
+        <p>Already have an account? <a href="~/Identity/Account/Login">Login here</a>.</p>
     </div>
     <div class="col-md-6 col-md-offset-2">
-        <section>
+
+     @*    <section>
             <h3>Use another service to register.</h3>
             <hr />
             @{
@@ -64,8 +77,8 @@
                     </form>
                 }
             }
-        </section>
-        <p>Already have an account? <a href="~/Identity/Account/Login">Login here</a>.</p>
+        </section> *@
+
     </div>
 </div>
 
