--- a/RecipesProject/Views/Home/Index.cshtml
+++ b/RecipesProject/Views/Home/Index.cshtml
@@ -37,7 +37,7 @@
         background-color: rgba(25, 102, 20, 0.5); /* Culoare verde-padure cu transparență */
         color: white; /* Schimbă culoarea textului butonului la alb */
         font-size: 30px; /* Dimensiunea textului butonului */
-        font-family: 'Garamond', serif; /* Aplică fontul Garamond */
+        font-family: 'Dancing Script', cursive;
         padding: 50px 70px; /* Adăugă un spațiu de padding în interiorul butonului */
         transition: background-color 0.3s; /* Animarea schimbării culorii de fundal */
         border: none; /* Elimină bordura butonului */
