--- a/RecipesProject/Areas/Identity/Pages/Account/LoginWith2fa.cshtml
+++ b/RecipesProject/Areas/Identity/Pages/Account/LoginWith2fa.cshtml
@@ -3,7 +3,15 @@
 @{
     ViewData["Title"] = "Two-factor authentication";
 }
-
+<style>
+    /* Stilurile pentru imaginea de fundal */
+    body {
+        background-image: url('https://i.imgur.com/BHGxiv1.jpg');
+        background-size: cover; /* Asigură că imaginea de fundal se întinde pentru a acoperi întreaga suprafață a paginii */
+        background-position: top;
+        background-attachment: fixed; /* Face ca imaginea de fundal să rămână fixă în timpul scroll-ului */
+    }
+</style>
 <h1>@ViewData["Title"]</h1>
 <hr />
 <p>Your login is protected with an authenticator app. Enter your authenticator code below.</p>
