--- a/RecipesProject/Areas/Identity/Pages/Account/Manage/_Layout.cshtml
+++ b/RecipesProject/Areas/Identity/Pages/Account/Manage/_Layout.cshtml
@@ -8,11 +8,19 @@
         Layout = "/Areas/Identity/Pages/_Layout.cshtml";
     }
 }
-
-<h1>Manage your account</h1>
+<style>
+    /* Stilurile pentru imaginea de fundal */
+    body {
+        background-image: url('https://i.imgur.com/BHGxiv1.jpg');
+        background-size: cover; /* Asigură că imaginea de fundal se întinde pentru a acoperi întreaga suprafață a paginii */
+        background-position: top;
+        background-attachment: fixed; /* Face ca imaginea de fundal să rămână fixă în timpul scroll-ului */
+    }
+</style>
+@* <h1>Manage your account</h1> *@
 
 <div>
-    <h2>Change your account settings</h2>
+    <h2>Change your account info</h2>
     <hr />
     <div class="row">
         <div class="col-md-3">
