--- a/RecipesProject/Areas/Identity/Pages/Account/ResetPassword.cshtml
+++ b/RecipesProject/Areas/Identity/Pages/Account/ResetPassword.cshtml
@@ -4,6 +4,16 @@
     ViewData["Title"] = "Reset password";
 }
 
+<style>
+    /* Stilurile pentru imaginea de fundal */
+    body {
+        background-image: url('https://i.imgur.com/BHGxiv1.jpg');
+        background-size: cover; /* Asigură că imaginea de fundal se întinde pentru a acoperi întreaga suprafață a paginii */
+        background-position: top;
+        background-attachment: fixed; /* Face ca imaginea de fundal să rămână fixă în timpul scroll-ului */
+    }
+</style>
+
 <h1>@ViewData["Title"]</h1>
 <h2>Reset your password.</h2>
 <hr />
