--- a/RecipesProject/Views/List/Index.cshtml
+++ b/RecipesProject/Views/List/Index.cshtml
@@ -72,7 +72,7 @@
     }
 
     .titlu {
-       /*  font-family: 'Dancing Script', cursive; */
+        font-family: 'Dancing Script', cursive;
         text-align: center;
         font-size: 60px;
         color: #003300;
@@ -173,6 +173,12 @@
         color: red;
     }
 
+    .titlu_lista{
+        text-align: left;
+        padding-left: 5px;
+        padding: 10px;
+        font-size: 30px;
+    }
 </style>
 
 <script>
@@ -205,7 +211,10 @@
         <div class="shopping-list">
             <button class="butondel" type="submit" form="delete-list-form-@list.Id">❌</button>
             <br />
-            <h3>@list.Name</h3>
+
+            <div class="titlu_lista">
+                @list.Name
+            </div>
 
             <form id="delete-list-form-@list.Id" asp-action="DeleteList" method="post" style="display:none;">
                 <input type="hidden" name="id" value="@list.Id" />
