--- a/RecipesProject/Views/Recicle/Index.cshtml
+++ b/RecipesProject/Views/Recicle/Index.cshtml
@@ -1,18 +1,84 @@
 ﻿@{
     ViewBag.Title = "Recicle";
 }
+<style>
+    body {
+        background-image: url('https://i.imgur.com/xLWdNFc.jpg');
+        background-size: cover; /* Asigură că imaginea de fundal se întinde pentru a acoperi întreaga suprafață a paginii */
+        background-position: center;
+        background-attachment: fixed; /* Face ca imaginea de fundal să rămână fixă în timpul scroll-ului */
+    } 
 
-<h2>Recicle</h2>
-<button id="myLocationButton" class="btn btn-primary">My Location</button>
+
+    .titlu {
+        font-family: 'Dancing Script', cursive;
+        text-align: center;
+        font-size: 40px;
+        padding-bottom: 30px;
+    }
+
+    .text{
+        font-family: 'Dancing Script', cursive;
+        font-size: 20px;
+        text-align: center;
+    }
+    .butoane_reciclare{
+        text-align: center; /* Aliniați butoanele la centru orizontal */
+    }
+
+    /* .butoane_reciclare  */.btn {
+        background-color: #EBEBE9;
+        color: black;
+        border: 2px solid transparent;
+        border-radius: 8px; /* Marginile butoanelor rotunjite */
+        padding: 12px 24px; /* Ajustați dimensiunile padding-ului pentru a mări butoanele */
+        margin: 8px; /* Spațiul dintre butoane */
+        font-size: 18px; /* Mărimea textului butoanelor */
+        cursor: pointer;
+        transition: all 0.3s ease;
+        box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1), 0 1px 3px rgba(0, 0, 0, 0.08);
+    }
+
+/*     #myLocationButton.btn:hover {
+        background-color: #9e002b; /* Setează culoarea de fundal la roșu la hover */
+/*     } */
+
+/*     #myLocationButton.btn:active {
+        background-color: #9e002b;
+    }  */
+
+/*         .btn:hover {
+            background-color: #f0f0f0;
+        } */
+</style>
+<div class="titlu">Don't forget to recicle!</div>
+
+<div class="text">Select your recicle centers for paper, glass, metal and plastic.</div>
+
+@* <button id="myLocationButton" class="btn btn-primary">My Location</button>
+ *@<br />
 <br />
-<br />
+@* <div class="butoane_reciclare">
 <button id="paperButton" class="btn" style="background-color: royalblue; color: black;">Paper</button>
 <button id="plasticButton" class="btn" style="background-color: darkkhaki; color: black;">Plastic</button>
 <button id="glassButton" class="btn" style="background-color: mediumseagreen; color: black;">Glass</button>
 <button id="metalButton" class="btn" style="background-color: lightcoral; color: black;">Metal</button>
+</div> *@
 
+<div class="butoane_reciclare">
+    <button id="myLocationButton" class="btn btn-primary">My Location</button>
+    <button id="paperButton" class="btn btn-primary">Paper</button>
+    <button id="plasticButton" class="btn btn-warning">Plastic</button>
+    <button id="glassButton" class="btn btn-success">Glass</button>
+    <button id="metalButton" class="btn btn-danger">Metal</button>
+</div>
 <br />
-<div id="map" style="height: 400px;"></div>
+<!-- Includeți fișierele JavaScript pentru Bootstrap (opțional) -->
+<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+@* <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"></script> *@
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+
+<div id="map" style="height: 500px;"></div>
 
 @section scripts {
     <script>
@@ -145,7 +211,204 @@
         function initMap() {
             map = new google.maps.Map(document.getElementById('map'), {
                 center: { lat: 44.43225, lng: 26.10626 }, // Bucuresti centru
-                zoom: 12
+                zoom: 12,
+                styles: [
+                    {
+                        "elementType": "geometry",
+                        "stylers": [
+                            {
+                                "color": "#f5f5f5"
+                            }
+                        ]
+                    },
+                    {
+                        "elementType": "labels.text.fill",
+                        "stylers": [
+                            {
+                                "color": "#333333"
+                            }
+                        ]
+                    },
+                    {
+                        "elementType": "labels.text.stroke",
+                        "stylers": [
+                            {
+                                "color": "#ffffff"
+                            }
+                        ]
+                    },
+                    {
+                        "featureType": "administrative",
+                        "elementType": "geometry.stroke",
+                        "stylers": [
+                            {
+                                "color": "#c9c9c9"
+                            }
+                        ]
+                    },
+                    {
+                        "featureType": "administrative.land_parcel",
+                        "elementType": "geometry.stroke",
+                        "stylers": [
+                            {
+                                "color": "#dcdcdc"
+                            }
+                        ]
+                    },
+                    {
+                        "featureType": "administrative.province",
+                        "elementType": "geometry",
+                        "stylers": [
+                            {
+                                "color": "#f5f5f5"
+                            }
+                        ]
+                    },
+                    {
+                        "featureType": "landscape.natural",
+                        "elementType": "geometry",
+                        "stylers": [
+                            {
+                                "color": "#f5f5f5"
+                            }
+                        ]
+                    },
+                    {
+                        "featureType": "poi",
+                        "elementType": "geometry",
+                        "stylers": [
+                            {
+                                "color": "#f5f5f5"
+                            }
+                        ]
+                    },
+                    {
+                        "featureType": "poi",
+                        "elementType": "labels.text.fill",
+                        "stylers": [
+                            {
+                                "color": "#333333"
+                            }
+                        ]
+                    },
+                    {
+                        "featureType": "poi.park",
+                        "elementType": "geometry",
+                        "stylers": [
+                            {
+                                "color": "#f5f5f5"
+                            }
+                        ]
+                    },
+                    {
+                        "featureType": "poi.park",
+                        "elementType": "labels.text.fill",
+                        "stylers": [
+                            {
+                                "color": "#333333"
+                            }
+                        ]
+                    },
+                    {
+                        "featureType": "road",
+                        "elementType": "geometry",
+                        "stylers": [
+                            {
+                                "color": "#ffffff"
+                            }
+                        ]
+                    },
+                    {
+                        "featureType": "road",
+                        "elementType": "labels.text.fill",
+                        "stylers": [
+                            {
+                                "color": "#333333"
+                            }
+                        ]
+                    },
+                    {
+                        "featureType": "road.arterial",
+                        "elementType": "geometry.stroke",
+                        "stylers": [
+                            {
+                                "color": "#d6d6d6"
+                            }
+                        ]
+                    },
+                    {
+                        "featureType": "road.highway",
+                        "elementType": "geometry.stroke",
+                        "stylers": [
+                            {
+                                "color": "#d6d6d6"
+                            }
+                        ]
+                    },
+                    {
+                        "featureType": "road.highway.controlled_access",
+                        "elementType": "geometry",
+                        "stylers": [
+                            {
+                                "color": "#ffffff"
+                            }
+                        ]
+                    },
+                    {
+                        "featureType": "road.highway.controlled_access",
+                        "elementType": "geometry.stroke",
+                        "stylers": [
+                            {
+                                "color": "#d6d6d6"
+                            }
+                        ]
+                    },
+                    {
+                        "featureType": "road.local",
+                        "elementType": "labels.text.fill",
+                        "stylers": [
+                            {
+                                "color": "#333333"
+                            }
+                        ]
+                    },
+                    {
+                        "featureType": "transit.line",
+                        "elementType": "geometry",
+                        "stylers": [
+                            {
+                                "color": "#ffffff"
+                            }
+                        ]
+                    },
+                    {
+                        "featureType": "transit.station",
+                        "elementType": "geometry",
+                        "stylers": [
+                            {
+                                "color": "#ffffff"
+                            }
+                        ]
+                    },
+                    {
+                        "featureType": "water",
+                        "elementType": "geometry",
+                        "stylers": [
+                            {
+                                "color": "#a0d6f7"
+                            }
+                        ]
+                    },
+                    {
+                        "featureType": "water",
+                        "elementType": "labels.text.fill",
+                        "stylers": [
+                            {
+                                "color": "#333333"
+                            }
+                        ]
+                    }
+                ]
             });
         }
 
@@ -224,6 +487,8 @@
             metalMarkers = []; // Goleste array-ul de marker-e
         }
 
+    </script>
+        }
     </script>
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAELmgwwCD6Zk66yg1D963hesjNg7IadMY&callback=initMap" async defer></script>
 }
