--- a/RecipesProject/Views/Recipe/Index.cshtml
+++ b/RecipesProject/Views/Recipe/Index.cshtml
@@ -1,21 +1,45 @@
 ﻿@model IEnumerable<Recipe>
+<style>
+    body {
+        background-image: url('https://i.imgur.com/FmeFUGh.jpg');
+        background-size: cover; /* Asigură că imaginea de fundal se întinde pentru a acoperi întreaga suprafață a paginii */
+        background-position: center;
+        background-attachment: fixed; /* Face ca imaginea de fundal să rămână fixă în timpul scroll-ului */
+    }
 
+    .text_reteta{
+        border-top: 3px dotted gray;
+        padding-bottom: 20px;
+        padding-top: 30px;
+        font-family: 'Dancing Script', cursive;
+        /* background-color: rgba(255, 255, 255, 0.8); */
+    }
+
+    .titlu{
+        font-family: 'Dancing Script', cursive;
+        text-align: center;
+        font-size: 40px;
+        padding-bottom: 30px;
+    }
+</style>
 @{
     ViewData["Title"] = "Saved Recipes";
 }
 
-<h1>Saved Recipes</h1>
+<div class="titlu"> Saved Recipes </div>
 
 @if (Model != null && Model.Any())
 {
     <ul>
         @foreach (var recipe in Model)
         {
+            <div class="text_reteta">
             <pre>@recipe.Description</pre>
+            </div>
         }
     </ul>
 }
 else
 {
-    <p>No recipes saved yet.</p>
+    <p>No recipes saved yet... Find your best recipes and save them!</p>
 }
