--- a/RecipesProject/Views/Shared/_LoginPartial.cshtml
+++ b/RecipesProject/Views/Shared/_LoginPartial.cshtml
@@ -1,25 +1,45 @@
 ﻿@using Microsoft.AspNetCore.Identity
 @inject SignInManager<IdentityUser> SignInManager
 @inject UserManager<IdentityUser> UserManager
+<style>
+    .navbar-profile-img{
+        max-width: 30px; /* Setează lățimea maximă a imaginii */
+        height: auto; /* Asigură raportul corect între lățime și înălțime */
+        display: inline-block;
+        padding-top: 9px;
+    }
 
+    .navbar-logout-img{
+        max-width: 25px; /* Setează lățimea maximă a imaginii */
+        height: auto; /* Asigură raportul corect între lățime și înălțime */
+        display: inline-block;
+        padding-top: 9px;
+    }
+</style>
 <ul class="navbar-nav">
 @if (SignInManager.IsSignedIn(User))
 {
     <li class="nav-item">
         @* <a  class="nav-link text-dark" asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage">Hello, @User.Identity?.Name</a> *@
-         <a  class="nav-link text-dark" asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage">Profile</a> 
+         <a  class="nav-link text-dark" asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage">
+                <img class="navbar-profile-img" src="https://i.imgur.com/cB30ORF.png" alt="Logo">
+         </a> 
 
     </li>
     <li class="nav-item">
         <form  class="form-inline" asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Action("Index", "Home", new { area = "" })">
-            <button  type="submit" class="nav-link btn btn-link text-dark">Logout</button>
+            <button  type="submit" class="nav-link btn btn-link text-dark">
+                     <img class="navbar-logout-img" src="https://i.imgur.com/4QOpMMy.png" alt="Logo"> 
+            </button>
         </form>
     </li>
 }
 else
 {
     <li class="nav-item">
-        <a class="nav-link text-dark" asp-area="Identity" asp-page="/Account/Register">Account</a>
+        <a class="nav-link text-dark" asp-area="Identity" asp-page="/Account/Register">
+                <img class="navbar-profile-img" src="https://i.imgur.com/cB30ORF.png" alt="Logo">
+            </a>
     </li>
 @*     <li class="nav-item">
         <a class="nav-link text-dark" asp-area="Identity" asp-page="/Account/Login">Login</a>
