--- a/RecipesProject/Views/Home/Index.cshtml
+++ b/RecipesProject/Views/Home/Index.cshtml
@@ -15,7 +15,8 @@
     /* Stilurile globale */
     body {
         background-image: url('https://i.imgur.com/djh8fp8.jpg');
-        background-size: 100% auto; /* Fundalul va cuprinde întreaga imagine pe lățime */
+        background-size: cover;
+       /*  background-size: 100% auto;  *//* Fundalul va cuprinde întreaga imagine pe lățime */
         background-position: center bottom; /* Imaginea va fi poziționată central pe axa orizontală și în partea de sus pe axa verticală */
         background-attachment: fixed; /* Imaginea de fundal va rămâne fixă în timpul scroll-ului */
         margin: 0; /* Elimină marginile implicite ale body-ului */
