--- a/RecipesProject/Views/Shared/_Layout.cshtml
+++ b/RecipesProject/Views/Shared/_Layout.cshtml
@@ -41,6 +41,19 @@
         color: #212529; /* Schimbă culoarea textului pentru a asigura contrast */
     }
 
+    .navbar-nav {
+        flex-wrap: nowrap; /* Forțează butoanele să nu se învârtă pe rânduri */
+    }
+
+        .navbar-nav .nav-item {
+            width: auto; /* Setează lățimea butoanelor la valoare implicită */
+            white-space: nowrap; /* Asigură că textul din butoane nu se învârtește pe mai multe rânduri */
+        }
+
+    media (max-width: 260px) {
+    .navbar-nav .nav-item {
+        display: inline-block; /* Setează butoanele să fie afișate ca blocuri inline */}    }
+    
 </style>
 
 <!DOCTYPE html>
@@ -52,33 +65,35 @@
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/RecipesProject.styles.css" asp-append-version="true" />
+@*     <link rel="stylesheet" href="~/RecipesProject/CSS/Navbar.css" asp-append-version="true" />   *@
 </head>
 <body>
     <header>
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light border-bottom box-shadow mb-3">
             <div class="container-fluid">
                 <!-- Menu Items -->
-                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <div class="navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav mr-auto">
                         <li class="nav-item">
                             @*<a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a> *@
                             <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">
                                 <img class="navbar-home-img" src="https://i.imgur.com/rO2bFAu.png" alt="Logo">
                             </a>
-                       </li>
+                        </li>
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                                 <img class="dropdown-img" src="https://i.imgur.com/czwINdd.png" alt="Logo">
                             </a>
                             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-@*                                 <a class="dropdown-item" asp-area="" asp-controller="Pantry" asp-action="Index">Pantry</a>
- *@                                <a class="dropdown-item" asp-area="" asp-controller="Generate" asp-action="Generate">Generate Recipe</a>
+                                @*                                 <a class="dropdown-item" asp-area="" asp-controller="Pantry" asp-action="Index">Pantry</a>
+                                *@                                <a class="dropdown-item" asp-area="" asp-controller="Generate" asp-action="Generate">Generate Recipe</a>
                                 <a class="dropdown-item" asp-area="" asp-controller="Video" asp-action="Index">News</a>
                                 <a class="dropdown-item" asp-area="" asp-controller="List" asp-action="Index">Shopping List</a>
                                 <a class="dropdown-item" asp-area="" asp-controller="Recicle" asp-action="Index">Recicle Map</a>
                                 <a class="dropdown-item" asp-area="" asp-controller="Recipe" asp-action="Index">Saved Recipes</a>
-@*                                 <a class="dropdown-item" asp-area="" asp-controller="Admin" asp-action="Index">All users</a>
- *@                            </div>
+                                @*                                 <a class="dropdown-item" asp-area="" asp-controller="Admin" asp-action="Index">All users</a>
+                                *@
+                            </div>
                         </li>
                     </ul>
                 </div>
@@ -107,5 +122,17 @@
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
     @RenderSection("scripts", required: false)
+
+    <script>
+        /* Adăugăm funcția JavaScript pentru a deschide și închide meniul navbar pe dispozitivele mici */
+        function toggleNavbar() {
+            var navbarCollapse = document.getElementById('navbarSupportedContent');
+            if (navbarCollapse.classList.contains('show')) {
+                navbarCollapse.classList.remove('show');
+            } else {
+                navbarCollapse.classList.add('show');
+            }
+        }
+    </script>
 </body>
 </html>
